# cursus-42

./: .gitignore  README.md
Born2beroot/: ReadMe.md  note.txt  signature.txt
Circle_0/libft/: ft_isdigit.c  ft_itoa.c  ft_lstadd_back.c  ft_lstlast.c  ft_lstsize.c  ft_memcmp.c  ft_memset.c  ft_putnbr_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strlcpy.c  ft_strlen.c  ft_strnstr.c  ft_toupper.c
Circle_1/ft_printf/: Makefile  README.md  ft_printf.c  main.c
Circle_1/get_next_line/: ReadMe.md  get_next_line.c
Circle_2/A-Maze-ing/: Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen.py  pyproject.toml
Circle_2/A-Maze-ing/mazegen/: __init__.py  generator.py  solver.py
Circle_2/Python_module/: README.md
Circle_2/Python_module/Module_08/ex1/: loading.py  pyproject.toml
Circle_2/Python_module_06/: ft_sacred_scroll.py
Circle_2/push_swap/: Makefile  ReadMe.md  error_handle.c  index.c  push_swap.c  push_swap.h  push_swap_utils.c  radix.c  reverse_rotate.c  swap.c  (+1 more)
Circle_3/Call_Me_Maybe/: Makefile  README.md  pyproject.toml  train.md
Circle_3/Call_Me_Maybe/data/output/: function_calling_results.json
Circle_3/Call_Me_Maybe/src/: __main__.py
Circle_3/Call_Me_Maybe/src/controller/: cli_parser.py
Circle_3/Call_Me_Maybe/src/llm_sdk/: __init__.py
Circle_3/Call_Me_Maybe/src/model/: __init__.py  llm_model.py  schemas.py
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  print_func.c  print_func2.c
get_next_line/: ReadMe.md  get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_lstadd_front.c  ft_lstnew.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strmapi.c  ft_strncmp.c  ft_substr.c  ft_tolower.c  libft.h  main.c
push_swap/: Makefile  ReadMe.md  algo.c  indexing.c  parsing.c  parsing_utils.c  push.c  push_swap  push_swap.c  push_swap.h  push_swap_utils.c  reverse_rotate.c  rotate.c  sort2_3.c  swap.c  test_ps.sh  traces.txt  utils_algo.c
(+183 files in other folders)
