[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-py"
version = "1.0.0"
description = "A perfect maze generator and solver created for the 42 curriculum."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Login", email = "your_login@student.42.fr" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]