[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-py"
version = "1.0.0"
description = "A perfect maze generator and solver created for the 42 curriculum."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "IALMANI && WAIBELFO"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: LINUX && MacOS",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]