[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "dotenv>=0.9.9",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "torch>=2.13.0",
    "transformers>=5.13.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.2.0",
]
