[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [{name = "Kiroshi",email = "pepeh1190@gmail.com"}]

requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
